test/syntax/37-case_stmt-2-err.c
// ======================================================================

/* case_stmt -> DEFAULT COLON statement */

// ======================================================================

void main(void)
{
  int i;

  switch (i) {
    default {}	// error: no COLON
  }
}

// ======================================================================
